--- a/index.html
+++ b/index.html
@@ -236,6 +236,10 @@
             </div>
         </div>
 
+        <div class="soporte-container">
+            <button type="button" id="abrirSoporte"><u>(Soy de soporte)</u></button>
+        </div>
+
         <div class="solution-container" id="solution">
             <label for="solucion">Solucionado con:</label>
             <input type="text" id="solucion" placeholder="Solución..." name="solucion">
