buttons and admin desing

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
             <div class="container">
                 <img class="icono" src="https://cdn-icons-png.flaticon.com/512/7191/7191281.png" alt="Listo">
-                <button type="submit">Reportar</button>
+                <button class="report-btn" type="submit">Reportar</button>
             </div>
         </div>
 
@@ -243,6 +243,12 @@
         <div class="solution-container" id="solution">
             <label for="solucion">Solucionado con:</label>
             <input type="text" id="solucion" placeholder="Solución..." name="solucion">
+            <div class="report-container">
+                <a href="https://docs.google.com/spreadsheets/d/1je52EDEAu93dXHROuKpY194iy4NG5bghCPDfJxBBISo/edit?gid=0#gid=0" target="_blank">
+                    Bitácora 
+                </a>
+                <button class="soporte-btn" type="submit">Enviar</button>
+            </div>
         </div>
         
 
